Revision history for perl module AnyEvent::UserAgent

0.04    2014-06-19
        - Added support for redefine some options of the user agent for one
          request only.
        - Fixed changing of the request options during the redirects.
        - Fixed processing of the request headers.
        - Added more tests.

0.03    2014-04-12
        - Fixed processing of an invalid URLs (reported by Andrey Khozov).

0.02    2013-10-06
        - Implemented Basic authorization support.
        - Implemented redirects support.
        - Fixed processing of the cookies in redirects.
        - Added max_redirects attribute.
        - Added more tests.

0.01    2013-08-16
        - Initial public release.