@@ -3,6 +3,7 @@ Revision history for perl module AnyEvent::UserAgent
 0.04    2014-06-19
         - Added support for redefine some options of the user agent for one
           request only.
+        - Added support for arguments of AnyEvent::HTTP::http_request method.
         - Fixed changing of the request options during the redirects.
         - Fixed processing of the request headers.
         - Added more tests.
